<resources>
    <string name="app_name">Mobile</string>
    <string name="button">Button</string>
    <string name="historia">História</string>
    <string name="loja">Loja</string>
    <string name="mapa">Mapa</string>
    <string name="Personagens">Personagens</string>
    <string name="redes_sociais">Redes sociais</string>
    <string name="todos">fundo</string>
    <string name="Voltar">voltar</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="xicrinho">Xicrinho</string>
    <string name="rei_dado">Rei Dado</string>
    <string name="diabo">Diabo</string>
    <string name="caneco">Caneco</string>
    <string name="todo5">TODO</string>
    <string name="cuphead_wiki">Cuphead Wiki</string>
    <string name="cuphead_wiki2">Cuphead Wiki</string>
    <string name="todo7">TODO</string>
    <string name="narrador">Narrador</string>
    <string name="seu_torresmo">Seu Torresmo</string>
    <string name="calice_lend">Cálice Lendária</string>
    <string name="velha_chaleira">Velha Chaleira</string>
    <string name="todo8">TODO</string>
    <string name="inicio">Cuphead contém diversos chefes, sendo eles:</string>
    <string name="resumo_boss">Escoaxo e Sopapo, Cactônio Spinoza, Sal Spudder, Ollie Bulb, Chauncey Chantenay, Il Melecone, Zobo o Palhaço, Baronesa Bombom, Genésio o Magnífico, Geni Buarque, Fogo de Chão, Tião Gavião, Abélia Reale, Capitão Barba-Salgada, Paula Protagonista, Maus von Kampf, Dona Iara, Fantasma Cego, T-Bone, Irmãos Chama, Cabeça do Trem, Rei Dado e Diabo</string>
    <string name="subchefes">Também existem os subchefes:</string>
    <string name="subchefes_">Robô do Dr. Kalo, Tropa Trêbada, Jeton d\'Croupier, Sr. O\'Tina, Domi e Nó, David Coelhofield, Assombradura, Piroleta, Mangastião e Sr. de Vento</string>
    <string name="todo9">TODO</string>
    <string name="todo10">TODO</string>
    <string name="ilha_tinteiro_um">Ilha Tinteiro Um</string>
    <string name="ilha_tinteiro_dois">Ilha Tinteiro Dois</string>
    <string name="ilha_tinteiro_tres">Ilha Tinteiro Três</string>
    <string name="ilha_tinteiro_infernal">Ilha Tinteiro Infernal</string>
    <string name="todo11">TODO</string>
    <string name="todo12">TODO</string>
    <string name="site">Site</string>
    <string name="txt_site">Cuphead possui um site oficial com informações de preços e plataformas na qual o jogo está disponível</string>
    <string name="todo13">TODO</string>
    <string name="todo14">TODO</string>
    <string name="todo15">TODO</string>
    <string name="twitter1">https://twitter.com/StudioMDHR</string>
    <string name="twitter2">https://twitter.com/CupheadShow</string>
    <string name="insta">https://www.instagram.com/cupheadshow/</string>
    <string name="face1">https://pt-br.facebook.com/studiomdhr</string>
    <string name="face2">https://pt-br.facebook.com/Cuphead/</string>
    <string name="face3">https://www.facebook.com/CupheadShow/</string>
    <string name="todo16">TODO</string>
    <string name="siteofc">https://cupheadgame.com/</string>
    <string name="voltar">Voltar</string>
    <string name="proximo">Próximo</string>
    <string name="voltar1">Voltar</string>
    <string name="voltar2">Voltar</string>
    <string name="voltar3">Voltar</string>
    <string name="proximo1">Próximo</string>
    <string name="voltar4">Voltar</string>
    <string name="sair">Sair</string>
    <string name="voltar5">Voltar</string>
    <string name="sair1">Sair</string>
    <string name="voltar6">Voltar</string>
    <string name="cuphead_wikii">Cuphead Wiki</string>
    <string name="historiatitulo">História</string>
    <string name="personagens_principais">Personagens principais</string>
    <string name="personagens_secund">Personagens secundários</string>
    <string name="chef">Chefões</string>
    <string name="cenarios">Cenários</string>
</resources>