<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tela5">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="380dp"
        android:layout_height="219dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/todo8"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/boss"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="87dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/inicio"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="337dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="360dp"
        android:layout_height="84dp"
        android:fontFamily="monospace"
        android:text="@string/resumo_boss"
        tools:ignore="MissingConstraints,TextSizeCheck,TextSizeCheck"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="366dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/subchefes"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="88dp"
        tools:layout_editor_absoluteY="477dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="346dp"
        android:layout_height="78dp"
        android:fontFamily="monospace"
        android:text="@string/subchefes_"
        tools:ignore="MissingConstraints,TextSizeCheck"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="509dp" />

    <Button
        android:id="@+id/btnvltchef"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="28dp"
        android:text="@string/voltar5"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnsairchef"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnsairchef"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="28dp"
        android:text="@string/sair1"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/chefoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/chef"
        android:textColor="#000000"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/materialToolbar5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/materialToolbar5"
        app:layout_constraintTop_toTopOf="@+id/materialToolbar5" />
</androidx.constraintlayout.widget.ConstraintLayout>