<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/redessociais"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tela9">

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="110dp"
        android:layout_height="102dp"
        android:layout_marginStart="31dp"
        android:contentDescription="@string/todo14"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/twitter_logo_png"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="113dp" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="117dp"
        android:layout_height="83dp"
        android:layout_marginStart="24dp"
        android:contentDescription="@string/todo15"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo_instagram_png_fundo_transparente"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="275dp" />


    <TextView
        android:id="@+id/textView20"
        android:layout_width="231dp"
        android:layout_height="48dp"
        android:autoLink="web"
        android:fontFamily="monospace"
        android:freezesText="@bool/tt1"
        android:minHeight="48dp"
        android:text="@string/twitter1"
        android:textColor="#0277BD"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView17"
        tools:ignore="MissingConstraints,TextContrastCheck,TextSizeCheck,TextSizeCheck"
        tools:layout_editor_absoluteY="131dp" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="247dp"
        android:layout_height="48dp"
        android:autoLink="web"
        android:fontFamily="monospace"
        android:freezesText="@bool/tt2"
        android:minHeight="48dp"
        android:text="@string/twitter2"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView17"
        tools:ignore="MissingConstraints,TextContrastCheck,TextSizeCheck"
        tools:layout_editor_absoluteY="182dp" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="226dp"
        android:layout_height="51dp"
        android:autoLink="web"
        android:fontFamily="monospace"
        android:freezesText="@bool/insta"
        android:minHeight="48dp"
        android:text="@string/insta"
        android:textColor="#0277BD"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView20"
        tools:ignore="MissingConstraints,TextContrastCheck,TextSizeCheck"
        tools:layout_editor_absoluteY="299dp" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="111dp"
        android:layout_height="111dp"
        android:layout_marginStart="25dp"
        android:contentDescription="@string/todo13"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/facebook_logo_3_1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="453dp" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="220dp"
        android:layout_height="54dp"
        android:autoLink="web"
        android:fontFamily="monospace"
        android:freezesText="@bool/face2"
        android:minHeight="48dp"
        android:text="@string/face3"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView21"
        tools:ignore="MissingConstraints,TextContrastCheck,TextSizeCheck"
        tools:layout_editor_absoluteY="502dp" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="228dp"
        android:layout_height="48dp"
        android:autoLink="web"
        android:fontFamily="monospace"
        android:freezesText="@bool/face1"
        android:minHeight="48dp"
        android:text="@string/face1"
        android:textColor="#0277BD"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView21"
        tools:ignore="MissingConstraints,TextContrastCheck,TextSizeCheck,TextSizeCheck"
        tools:layout_editor_absoluteY="431dp" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="209dp"
        android:layout_height="49dp"
        android:autoLink="web"
        android:fontFamily="monospace"
        android:freezesText="@bool/face3"
        android:minHeight="48dp"
        android:text="@string/face2"
        android:textColor="#0277BD"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.797"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,TextContrastCheck,TextSizeCheck"
        tools:layout_editor_absoluteY="576dp" />

    <Button
        android:id="@+id/btnvltrd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="298dp"
        android:text="@string/voltar3"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="667dp" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="49dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/imageView17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/rs_tit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/redes_sociais"
        android:textColor="#000000"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/materialToolbar9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/materialToolbar9"
        app:layout_constraintTop_toTopOf="@+id/materialToolbar9" />

</androidx.constraintlayout.widget.ConstraintLayout>